litellm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: litellm-ingress
  namespace: default
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.k8sflow.space
      secretName: ingress-tls
  rules:
    - host: api.k8sflow.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: litellm-service
                port:
                  number: 4000
